<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    
    >
     
<ScrollView 
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
</ScrollView>

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:stretchColumns="1" >
    
    <TextView
        android:id="@+id/tvSelectGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/selectGroupType"
        android:textColor="#48D1CC"
        android:textSize="18sp"
         />
    <Spinner
        android:id="@+id/groupTypeSpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp" 
        />    
        
    <TextView
        android:id="@+id/tvSelectGroupPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/selectGroupPrivacy"
        android:textColor="#48D1CC"
        android:textSize="18sp"
         />    
    
    <RadioGroup 
    android:id="@+id/groupPrivacy"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <RadioButton
        android:id="@+id/privacyPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacyPublic"
        android:textColor="#48D1CC" 
        android:onClick="onRadioButtonClicked"/>

    <RadioButton
        android:id="@+id/privacyPrivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacyPrivate"
        android:textColor="#48D1CC" 
        android:onClick="onRadioButtonClicked"/>
</RadioGroup>

    <TextView
        android:id="@+id/tvGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/groupName"
        android:textColor="#48D1CC"
        android:textSize="18sp"
         />

    <EditText
        android:id="@+id/etGroupName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <requestFocus />
    </EditText>

    <TableRow>

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:background="#48D1CC"
            android:onClick="onClickPic"
            android:text="@string/uploadImage" 
            android:textColor="#F5F5F5"
            />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/tvGroupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/groupDescription" 
        android:textColor="#48D1CC"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/etGroupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#48D1CC"
        android:onClick="onCreateGroupClick"
        android:text="@string/buttonCreateGroup"
        android:textColor="#F5F5F5"
         />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#48D1CC"
        android:onClick="onCancelClick"
        android:text="@string/buttonCancel" 
        android:textColor="#F5F5F5"
        />
</TableLayout>

</LinearLayout>