<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:padding="15dp"
    >

    <Spinner
        android:id="@+id/spinnerEventType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        />
    
    

      <TextView
        android:layout_marginTop="40dp"
        style="@style/FormTheme"
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventName"
        />
    <EditText
        
        android:id="@+id/eventName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="" 
        />




    <TableRow>
        <TextView
        android:layout_marginTop="10dp"
        style="@style/FormTheme"
        android:id="@+id/tvEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventDate"
        />

        <EditText
            android:id="@+id/eventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/eventDate"
            android:inputType="date" />
        
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/tvEventTime"
            style="@style/FormTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/eventTime" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/editText2"
            android:inputType="time" />
    </TableRow>
    
    <TableRow>
              <TextView
        style="@style/FormTheme"
        android:id="@+id/tvEventVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventVenue"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/eventVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="" 
        >

        <requestFocus />
    </EditText>
    </TableRow>
		
    <TableRow>
        <TextView
        style="@style/FormTheme"
        android:layout_marginTop="10dp"
        android:id="@+id/tvEventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventLocation"
        />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/editText3"
            android:inputType="textPostalAddress" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_marginTop="10dp"
        style="@style/FormTheme"
        android:id="@+id/tvEventPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventPrice"
        />

    <EditText
        android:id="@+id/eventPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="" 
        />
    </TableRow>
    
    <TextView
        android:layout_marginTop="10dp"
        style="@style/FormTheme"
        android:id="@+id/tvEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventDescription"
       
        />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/editText1"
        android:inputType="textMultiLine" />
    
    <Button
        android:id="@+id/buttonCreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCreateEvent"
        android:layout_marginTop="10dp"
        android:background="#48D1CC"
        android:text="@string/buttonCreateEvent"
        />
    
</TableLayout>