<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/userPitcure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:src="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="#48D1CC"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"  />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:layout_marginLeft="15dp"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

    

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/gender"
        android:textColor="#48D1CC"
        android:layout_marginLeft="15dp"
        android:textSize="15sp" />
<RadioGroup 
    android:id="@+id/userGenderGroup"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton
        android:id="@+id/genderMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genderMale"
        android:textColor="#48D1CC" 
        android:layout_marginLeft="15dp"
        android:textSize="15sp"
        android:onClick="onRadioButtonClicked"/>

    <RadioButton
        android:id="@+id/genderFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genderFemale"
        android:textColor="#48D1CC"
        android:layout_marginLeft="15dp"
        android:textSize="15sp" 
        android:onClick="onRadioButtonClicked"/>
</RadioGroup>
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/age"
        android:textColor="#48D1CC"
        android:layout_marginLeft="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:layout_marginLeft="15dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/description"
        android:textColor="#48D1CC"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" 
        android:layout_marginLeft="15dp"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:onClick="onCreateProfileClick" 
        android:background="#48D1CC"
        android:textColor="#ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/buttonCancle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="onCancleCreateProfileClick" 
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="15sp"
        android:background="#48D1CC"
        android:textColor="#ffffff"
        />

</LinearLayout>
</ScrollView>