<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120sp"
        android:text="@string/username" 
        android:textColor="#48D1CC"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" 
        android:ems="10"
        android:hint="" 
        >

        <requestFocus />
    </EditText>

      <TextView
          android:id="@+id/tvPassword"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/password" 
          android:layout_marginTop="30sp"
          android:textColor="#48D1CC"
          android:textSize="18sp"
          />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
         />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loginButton" 
        android:background="#48D1CC"
        android:layout_marginTop="20sp"
        android:textColor="#FFFFFF"
        />

</LinearLayout>