<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

        <ImageButton
        android:id="@+id/userPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:onClick="onAddPictureClick"
        android:src="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="#48D1CC"
        android:layout_marginLeft="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15sp" 
        android:singleLine="true"
        android:layout_marginLeft="15dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/description"
        android:textColor="#48D1CC"
        android:textSize="15sp"  />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:layout_marginLeft="15dp"
        android:inputType="textMultiLine" 
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:onClick="onCreateProfileClick" 
        android:background="#48D1CC"
        android:textColor="#ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/buttonCancle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="onCancleCreateProfileClick" 
        android:background="#48D1CC"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#ffffff"
        android:textSize="15sp"
        />

</LinearLayout>
</ScrollView>