<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    
    >
     
<ScrollView 
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:stretchColumns="1" >
    
    <TextView
        android:id="@+id/tvSelectGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/selectGroupType"
        android:textColor="#48D1CC"
        android:textSize="18sp"
         />

    <TableRow>

        <ImageButton
            android:id="@+id/userPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:onClick="onAddPictureClick"
            android:src="@android:drawable/sym_def_app_icon" />
    </TableRow>
    
    <Spinner
        android:id="@+id/groupTypeSpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp" 
        />

   

    <TextView
        android:id="@+id/tvGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/groupName"
        android:textColor="#48D1CC"
        android:textSize="18sp"
         />

    <EditText
        android:id="@+id/etGroupName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <requestFocus />
    </EditText>

   

    <TextView
        android:id="@+id/tvGroupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/groupDescription" 
        android:textColor="#48D1CC"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/etGroupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#48D1CC"
        android:onClick="onSaveInformation"
        android:text="@string/btnSave"
        android:textColor="#F5F5F5"
         />

</TableLayout>
</ScrollView>
</LinearLayout>